Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* correct a tb when throwing a missing file error for specifying package.*
  settings directly to domain.

* correct a tb in profiles expansion code of USE_EXPAND and USE_EXPAND_HIDDEN
  when they're completely undefined in the profile stack.  Rare, but if a
  user is building a custom profile stack from the ground up, it's possible
  to hit it.

* gentoo upstream bug 297933; filter BASHOPTS to keep bash 4.1 happy.

* correct an encoding issue in making binpkgs when an ebuild is utf8

* fix a traceback in pmerge -fK when trying to fetch required files for
  binpkgs.


pkgcore 0.5.6: December 13th, 2009

* tweak pkgcore configuration subsystem to tell you the parameter involved
  when it's passed an incorrectly typed object.

* fix an encoding issue w/ utf8 ebuilds on merging.


pkgcore 0.5.5: November 26th, 2009

* portage changed their flat_hash support a while back, specifically
  how mtime was stored.  We match that now (although it's daft to do so)
  for compatibility sake- primarily affected CVS users.

* removed a potential in the merge engine where triggers that didn't
  do an abspath on items they added could incorrectly be moved.
  Specifically affected FEATURES=debugedit for /usr/lib -> lib64 pathways.

* boolean restrictions now default to being finalized.

* pkgcore.fs.ops.offset_rewriter -> pkgcore.fs.contents.offset_rewriter

* various code cleanups, quite a few conversions to snakeoil.klass
  decorators/property tricks to simplify the code.

* experimental python3.1 support.  Bugs welcome, although till stated
  otherwise, it's considered unsupported.

* pkgcore.restrictions.values.ComparisonMatch has been removed.

* for overlayed repositories that have invalid atom stacking in their
  package.mask, give an appropriate error message indicating the file.

* gentoo bug 196561, PMS doesn't match portage behaviour for '~' atom